force-app/main/default/objects/Shop__c/fields/Director_Field__c.field-meta.xml
<CustomField>
    <fullName>Director_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Director Field</description>
    <inlineHelpText>Director Field</inlineHelpText>
    <label>Director Field</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Shops</relationshipName>
    <type>Lookup</type>
</CustomField>