force-app/main/default/objects/Shop__c/fields/Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>Payment_Methods__c</fullName>
    <description>Payment Methods</description>
    <inlineHelpText>Payment Methods</inlineHelpText>
    <label>Payment Methods</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>