force-app/main/default/objects/Shop__c/fields/Shop_size__c.field-meta.xml
<CustomField>
    <fullName>Shop_size__c</fullName>
    <description>Shop size</description>
    <inlineHelpText>Shop size</inlineHelpText>
    <label>Shop size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>tiny</fullName>
                <default>true</default>
                <label>tiny</label>
            </value>
            <value>
                <fullName>small</fullName>
            </value>
            <value>
                <fullName>average</fullName>
            </value>
            <value>
                <fullName>large</fullName>
            </value>
            <value>
                <fullName>extremely large</fullName>
            </value>
            <value>
                <fullName>enormous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>