force-app/main/default/objects/Shop__c/recordTypes/Web_Shop.recordType-meta.xml
<RecordType>
    <fullName>Web_Shop</fullName>
    <active>true</active>
    <description>Web Shop Record Type</description>
    <label>Web Shop</label>
</RecordType>