force-app/main/default/objects/Shop__c/validationRules/Check_director_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_director_field</fullName>
    <active>true</active>
    <errorConditionFormula>Director_Field__r.Id = null</errorConditionFormula>
    <errorDisplayField>Director_Field__c</errorDisplayField>
    <errorMessage>There must be a director.</errorMessage>
</ValidationRule>