force-app/main/default/objects/Shop__c/validationRules/Check_Monthly_Revenue.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Monthly_Revenue</fullName>
    <active>true</active>
    <errorConditionFormula>OR (Monthly_Revenue__c &lt;=0,  ISBLANK(Monthly_Revenue__c) )</errorConditionFormula>
    <errorMessage>Not enough monthly revenue!</errorMessage>
</ValidationRule>