force-app/main/default/objects/Shop__c/listViews/Rich_Web_Shop.listView-meta.xml
<ListView>
    <fullName>Rich_Web_Shop</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Shop__c.Web_Shop</value>
    </filters>
    <filters>
        <field>Annual_Revenue__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </filters>
    <label>Rich Web Shop</label>
</ListView>